Add sonar lint fixes